--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@ant-design/colors": "7.2.0",
     "@ant-design/icons": "5.6.0",
     "@emotion/cache": "11.14.0",
-    "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fontsource/inter": "5.1.1",
     "@fontsource/poppins": "5.1.1",
     "@fontsource/public-sans": "5.1.2",
@@ -31,8 +31,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/base": "5.0.0-beta.69",
+    "@mui/icons-material": "^7.2.0",
     "@mui/lab": "6.0.0-beta.24",
-    "@mui/material": "6.4.1",
+    "@mui/material": "^7.2.0",
     "@mui/system": "6.4.1",
     "@mui/x-charts": "7.24.1",
     "@mui/x-date-pickers": "^8.1.0",
@@ -42,7 +43,9 @@
     "formik": "2.4.6",
     "framer-motion": "^12.9.2",
     "i18n-iso-countries": "^7.14.0",
+    "libphonenumber-js": "^1.12.9",
     "lodash-es": "4.17.21",
+    "mcc-mnc-list": "^1.1.11",
     "motion-dom": "^12.9.1",
     "qrcode.react": "^4.2.0",
     "react": "18.3.1",
