--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "react-device-detect": "2.2.3",
     "react-dom": "18.3.1",
     "react-number-format": "5.4.3",
+    "react-phone-number-input": "^3.4.12",
     "react-router": "7.1.3",
     "react-router-dom": "7.1.3",
+    "react-select-country-list": "^2.2.3",
     "reactflow": "^11.11.4",
     "simplebar-react": "3.3.0",
     "swr": "2.3.0",
