feat: Enhance documentation and help pages with detailed guides and FAQs, fixes #24 #25 #21 #23 and #22

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "QueueDriod-dashboard",
+  "name": "QueueDroid-dashboard",
   "version": "1.5.0",
-  "homepage": "https://QueueDriod.com/",
+  "homepage": "https://QueueDroid.com/",
   "author": {
-    "name": "QueueDriod",
+    "name": "QueueDroid",
     "email": "developers@smswithoutborders.com",
-    "url": "https://QueueDriod.com/"
+    "url": "https://QueueDroid.com/"
   },
   "scripts": {
     "start": "vite",
